Resolve Accessibility issues

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
       </div>
 
   <div class="buttons">
-        <button class= button id="button-previous" type="button"></button>
-        <button class= button id="button-next" type="button"></button>
+        <button class= button id="button-previous" type="button" aria-label="button-previous"></button>
+        <button class= button id="button-next" type="button" aria-label="button-next"></button>
   </div>
 
  </div>   
 
   <div class="card-text">
-    <div class="testimonial">
+    <h1 class="testimonial">
     “ I’ve been interested in coding for a while but never taken the jump, until now.
     I couldn’t recommend this course enough. I’m now in the job of my dreams and so
     excited about the future. ”
-    </div>
+    </h1>
     <div class="name-position">
      <div class="name">Tanya Sinclair&nbsp;</div>
      <div class="status">UX Engineer</div>
